infra/k8s/13-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: stonksco
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
