infra/k8s/23-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: stonksco
spec:
  selector:
    app: api
  ports:
    - port: 8000
      targetPort: 8000
