infra/k8s/31-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: stonksco
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
