infra/k8s/51-httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: stonksco
spec:
  parentRefs:
    - name: stonksco-gateway
  hostnames:
    - app.stonksco.com
  rules:
    - backendRefs:
        - name: frontend
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
  namespace: stonksco
spec:
  parentRefs:
    - name: stonksco-gateway
  hostnames:
    - api.stonksco.com
  rules:
    - backendRefs:
        - name: api
          port: 8000
