infra/k8s/73-networkpolicy-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-to-frontend
  namespace: stonksco
spec:
  podSelector:
    matchLabels: { app: frontend }
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
      ports:
        - { protocol: TCP, port: 8080 }
